# fuyohai-recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: urls.py  wsgi.py
config/settings/: base.py  production.py
cv/: forms.py  models.py  urls.py  views.py
cv/mahjong/: mahjong.py  mahjong_sim.py
cv/mahjong/data/: distance.json  result.json
cv/migrations/: 0001_initial.py
static/js/: tableexport.js
templates/: base.html
templates/cv/: image-feature.html  index.html
users/migrations/: 0001_initial.py
