[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
django-cleanup = "^5.2.0"
django-pandas = "^0.6.4"
wsgi-basic-auth = "^1.1.0"
Pillow = "^8.2.0"
opencv-python = "^4.5.2"
opencv-contrib-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
